--- a/contact.html
+++ b/contact.html
@@ -49,6 +49,21 @@
           on instagram:
           <a href="https://www.instagram.com/joshickie/?hl=en">@joshickie</a>
         </p>
+        <form name="contact" method="POST" data-netlify="true">
+          <p>
+            <label>Your Name: <input type="text" name="name" /></label>   
+          </p>
+          <p>
+            <label>Your Email: <input type="email" name="email" /></label>
+          </p>
+          <p>
+            <label>Message: <textarea name="message"></textarea></label>
+          </p>
+          <p>
+            <button type="submit">Send</button>
+          </p>
+        </form>
+        
       </section>
     </section>
     <footer class="contact">
