Updated homepage image and added coorect margin to the videos on mobile

--- a/homepage.html
+++ b/homepage.html
@@ -147,7 +147,7 @@
         </section>
         <section class="photo">
           <img
-            src="images/Website photos/img28.jpg"
+            src="images/Website photos/img28-min.jpg"
             alt=""
             width="150px"
             height="150px"
